--- a/app/src/main/res/layout/activity_my_post.xml
+++ b/app/src/main/res/layout/activity_my_post.xml
@@ -32,7 +32,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/my_post_recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="350dp"
+            android:layout_height="match_parent"
             android:layout_margin="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
@@ -42,92 +42,8 @@
             android:dividerHeight="100dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
-        <!-- 게시글 검색 버튼 공간 -->
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.075">
-
-            <Button
-                android:id="@+id/logoutButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="#6200EE"
-                android:text="로그아웃"
-                android:textColor="#FFFFFF"
-                tools:layout_editor_absoluteX="-40dp"
-                tools:layout_editor_absoluteY="100dp" />
-
-        </LinearLayout>
-
 
     </LinearLayout>
 
-    <!-- 게시글 추가 버튼 -->
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/AddPost_Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        android:src="@drawable/baseline_mode_edit_24"
-        app:backgroundTint="#49B7C5"
-        app:borderWidth="0dp"
-        app:elevation="8dp" />
-
-    <!-- 나의 게시글 버튼-->
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/MyPost_Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-
-        app:backgroundTint="#E6675E"
-        app:borderWidth="0dp"
-        app:elevation="8dp"
-        app:srcCompat="@drawable/baseline_perm_identity_24" />
-
-    <!-- 검색 버튼-->
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/Search_Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        app:backgroundTint="#F3DE2D"
-        app:borderWidth="0dp"
-        app:elevation="8dp"
-        app:srcCompat="@drawable/baseline_search_24" />
-
-    <!-- 메뉴 보기 버튼-->
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/MenuButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        android:clickable="true"
-        app:backgroundTint="#8A67C8"
-        app:borderWidth="0dp"
-        app:elevation="8dp"
-        app:srcCompat="@drawable/baseline_menu_24" />
 
 </RelativeLayout>
