--- a/app/src/main/res/layout/activity_display_post.xml
+++ b/app/src/main/res/layout/activity_display_post.xml
@@ -30,7 +30,7 @@
 
                 <!-- 학과명 공간 -->
                 <TextView
-                    android:id="@+id/categoryShowText"
+                    android:id="@+id/Major_ShowText"
                     android:layout_width="200dp"
                     android:layout_height="match_parent"
                     android:gravity="center"
@@ -40,6 +40,7 @@
 
                 <!-- 카테고리명 공간 -->
                 <TextView
+                    android:id="@+id/Object_ShowText"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
@@ -50,7 +51,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/main_recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="350dp"
+            android:layout_height="match_parent"
             android:layout_margin="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
@@ -59,26 +60,6 @@
             android:divider="@android:color/darker_gray"
             android:dividerHeight="100dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-
-        <!-- 게시글 검색 버튼 공간 -->
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.075">
-
-            <Button
-                android:id="@+id/logoutButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="#6200EE"
-                android:text="로그아웃"
-                android:textColor="#FFFFFF"
-                tools:layout_editor_absoluteX="-40dp"
-                tools:layout_editor_absoluteY="100dp" />
-
-        </LinearLayout>
-
 
     </LinearLayout>
 
