--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -12,8 +12,8 @@
         android:layout_height="wrap_content"
         android:text="Back to Main"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="42dp"
-        tools:layout_editor_absoluteY="560dp" />
+        tools:layout_editor_absoluteX="18dp"
+        tools:layout_editor_absoluteY="16dp" />
 
     <TextView
         android:id="@+id/titleTextView"
@@ -29,9 +29,9 @@
     <TextView
         android:id="@+id/contentsTextView"
         android:layout_width="300dp"
-        android:layout_height="44dp"
+        android:layout_height="200dp"
         android:text="contents"
-        android:textSize="30sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/titleTextView"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,13 +42,15 @@
         android:id="@+id/likesTextView"
         android:layout_width="300dp"
         android:layout_height="44dp"
+        android:layout_marginTop="8dp"
         android:text="imageUrlTextView"
         android:textSize="30sp"
         android:textStyle="bold"
-        tools:ignore="MissingConstraints"
-        app:layout_constraintTop_toBottomOf="@+id/contentsTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.342"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/contentsTextView"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/likeButton"
@@ -60,17 +62,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <TextView
-        android:id="@+id/imageUrlTextView"
-        android:layout_width="300dp"
-        android:layout_height="44dp"
-        android:text="imageUrlTextView"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        tools:ignore="MissingConstraints"
-        app:layout_constraintTop_toBottomOf="@+id/likeButton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/nameTextView"
@@ -80,7 +71,7 @@
         android:textSize="30sp"
         android:textStyle="bold"
         tools:ignore="MissingConstraints"
-        app:layout_constraintTop_toBottomOf="@+id/imageUrlTextView"
+        app:layout_constraintTop_toBottomOf="@+id/viewsTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -89,23 +80,20 @@
         android:layout_width="300dp"
         android:layout_height="44dp"
         android:text="timestampTextView"
-        android:textSize="30sp"
+        android:textSize="10sp"
         android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/likeButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="200dp"
+        android:layout_height="68dp"
         app:layout_constraintTop_toBottomOf="@+id/nameTextView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <TextView
-        android:id="@+id/userIdTextView"
-        android:layout_width="300dp"
-        android:layout_height="44dp"
-        android:text="userIdTextView"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/timestampTextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/main_logo"/>
 
     <TextView
         android:id="@+id/viewsTextView"
@@ -114,7 +102,7 @@
         android:text="viewsTextView"
         android:textSize="30sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/userIdTextView"
+        app:layout_constraintTop_toBottomOf="@+id/timestampTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
